--- a/views/adviser_case_p.html
+++ b/views/adviser_case_p.html
@@ -51,13 +51,6 @@
             {% endif %}
             {% endif %}
         </div>
-        <div style="margin-top: 20px;" class="dui-box-shadow">
-            <div class="common-title" style="border:1px solid #dcdcdc;">
-                <i></i>
-                <h3>作者精选</h3>
-            </div>
-            {% esi helper.include(esikey,'fragment/author_selection','uid='+to_uid) %}
-        </div>
       <div style="margin-top: 20px;" class="dui-box-shadow">
         <div class="common-title" style="border:1px solid #dcdcdc;">
           <i></i>
@@ -65,14 +58,13 @@
         </div>
         {% esi helper.include(esikey,'fragment/guess_like','n='+country,'c='+tdk.cityid) %}
       </div>
-        <div class="huod-lod clearfix dui-box-shadow" style="margin-top: 20px">
-            <div class="expert_unscramble_title expert_unscramble_title_new">
-                <i></i><h3>活动预告</h3> <a target="_blank" href="javascript:void(0);"></a>
-            </div>
-            <div style="background:#fff;" >
-               {% esi helper.include(esikey,'fragment/huodongyugao','pos=cmslist','c='+tdk.cityid,'n='+hcountry) %}
-            </div>
+      <div style="margin-top: 20px;" class="dui-box-shadow">
+        <div class="common-title" style="border:1px solid #dcdcdc;">
+          <i></i>
+          <h3>相关顾问</h3>
         </div>
+        {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+country,'c='+tdk.cityid) %}
+      </div>
     </div>
     <div class="dui-layout-div"></div>
     <div class="dui-layout-con dui-box-shadow" style="background-color: #fff;">
