--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -44,16 +44,16 @@
     <div style="margin-top: 20px;" class="dui-box-shadow">
       <div class="common-title" style="border:1px solid #dcdcdc;">
         <i></i>
-        <h3>作者精选</h3>
+        <h3>猜你喜欢</h3>
       </div>
-      {% esi helper.include(esikey,'fragment/author_selection','uid='+to_uid) %}
+      {% esi helper.include(esikey,'fragment/guess_like','n='+country,'c='+tdk.cityid) %}
     </div>
     <div style="margin-top: 20px;" class="dui-box-shadow">
       <div class="common-title" style="border:1px solid #dcdcdc;">
         <i></i>
-        <h3>猜你喜欢</h3>
+        <h3>相关顾问</h3>
       </div>
-      {% esi helper.include(esikey,'fragment/guess_like','n='+country,'c='+tdk.cityid) %}
+      {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+country,'c='+tdk.cityid) %}
     </div>
   </div>
   <div class="dui-layout-div"></div>
