--- a/views/center_main.html
+++ b/views/center_main.html
@@ -147,15 +147,15 @@
                     {{ case_show.case_show(item, helper) }}
                     {% elif item.category_id < 17 %}  专栏 
                     {% import "widget2/article/article.html" as article_show %}
-                    {{ article_show.article_show(item, helper) }}
+                    {{ article_show.adviser_show(item, helper) }}
                     {% endif %}
-                    {% include "widget2/bottom_comment/bottom_comment.html" %}
+                    {% include "widget2/bottom_comment/bottom_comment_zhuanlan_zhuye.html" %}
                     {% endfor %}#}
 
                     {% for item in collection_list.list %}
                         {% import "widget2/article/article.html" as article_show %}
                         {{ article_show.adviser_show(item, helper) }}
-                        {% include "widget2/bottom_comment/bottom_comment_zhuanlan.html" %}
+                    {% include "widget2/bottom_comment/bottom_comment_zhuanlan_zhuye.html" %}
                     {% endfor %}
                 </div>
                 {% else %}
