--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -569,7 +569,12 @@
         }    
         //跳转预览详情页  
         if(login_ss.usertype ==2){
-          window.open('/advisor_center/article/'+$(".editor-btn-box").attr("data-articleId")+'?preview=1');
+            if(artType == 1){
+                window.open('/advisor_center/case/'+$(".editor-btn-box").attr("data-articleId")+'?preview=1');
+            }else {
+                window.open('/advisor_center/article/'+$(".editor-btn-box").attr("data-articleId")+'?preview=1');
+            }
+
         }else if(login_ss.usertype ==3){
           window.open('/canzan_center/article/'+$(".editor-btn-box").attr("data-articleId")+'?preview=1');
         }
