--- a/views/agreement.html
+++ b/views/agreement.html
@@ -10,7 +10,10 @@
     margin-right: 0;
   }
   .top {
-    background: #dcdcdc;
+    background: #f5f5f5;
+  }
+  .top span a {
+    background: #f5f5f5!important;
   }
   h2 {
     color: #333;
@@ -45,7 +48,7 @@
     border-top:1px solid #C13232 ;
   }
 </style>
-<body style="background: #dcdcdc">
+<body style="background: #f5f5f5">
 
 {% include "widget/top/top.html" %}
 {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
