--- a/views/adviser_case_p.html
+++ b/views/adviser_case_p.html
@@ -51,13 +51,6 @@
             {% endif %}
             {% endif %}
         </div>
-        <div style="margin-top: 20px;" class="dui-box-shadow">
-            <div class="common-title" style="border:1px solid #dcdcdc;">
-                <i></i>
-                <h3>作者精选</h3>
-            </div>
-            {% esi helper.include(esikey,'fragment/author_selection','uid='+to_uid) %}
-        </div>
       <div style="margin-top: 20px;" class="dui-box-shadow">
         <div class="common-title" style="border:1px solid #dcdcdc;">
           <i></i>
@@ -65,14 +58,13 @@
         </div>
         {% esi helper.include(esikey,'fragment/guess_like','n='+country,'c='+tdk.cityid) %}
       </div>
-        <div class="huod-lod clearfix dui-box-shadow" style="margin-top: 20px">
-            <div class="expert_unscramble_title expert_unscramble_title_new">
-                <i></i><h3>活动预告</h3> <a target="_blank" href="javascript:void(0);"></a>
-            </div>
-            <div style="background:#fff;" >
-               {% esi helper.include(esikey,'fragment/huodongyugao','pos=cmslist','c='+tdk.cityid,'n='+hcountry) %}
-            </div>
+      <div style="margin-top: 20px;" class="dui-box-shadow">
+        <div class="common-title" style="border:1px solid #dcdcdc;">
+          <i></i>
+          <h3>相关顾问</h3>
         </div>
+        {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+country,'c='+tdk.cityid) %}
+      </div>
     </div>
     <div class="dui-layout-div"></div>
     <div class="dui-layout-con dui-box-shadow" style="background-color: #fff;">
@@ -109,7 +101,7 @@
     </div>
 </div>
 {% import "widget/new_slide/new_slide3.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo) }}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo,login_info) }}
 {% include "widget/new_footer/new_footer.html" %}
 <script>
   var login_ss = null; 
@@ -119,7 +111,7 @@
 </script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan_zhuye.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/slide2.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
@@ -166,8 +158,8 @@
     function appendArticleItem (aitem) {
       var aItemHtml = '<div class="homepage">'+
           '<div class="homepagecon">'+
-          '<a target="_blank"  href="' + fn.urlgen("blog", aitem.uid.toString()) + '" >'+
-          '<div class="homepageing" style="background:url('+fn.avaterimg(aitem.uid,'small',aitem.user_info.status,aitem.user_info.version)+') no-repeat 0 0;background-size: 50px 50px;"></div>'+
+          '<a target="_blank"  href="' + fn.urlgen( aitem.uid.toString()) + '" >'+
+          '<div class="homepageing" style="background:url('+fn.avaterimg(aitem.uid,'small',aitem.user_info.status,aitem.user_info.version)+') no-repeat 0 0;background-size: cover;"></div>'+
           '<h3>'+ aitem.user_info.realname +'<img src="'+ ajaxUrlPrefix.cdnhost +'/assets/img/1v.png" alt=""></h3>'+
           '</a>'+
           '<ul>'+
@@ -183,16 +175,16 @@
           '</div>'+
           '<div class="homepage-title">'+
           '<p>'+
-          '<a  target="_blank" href="'+ fn.articleUrlgen("blog",aitem.uid.toString(),"article="+aitem.id.toString()) +'" class="dui-text-warning">'+aitem.title+'<div>'+aitem.tag_list+'</div>'+
+          '<a  target="_blank" href="'+ fn.urlgen("case",aitem.id.toString()) +'" class="dui-text-warning">'+aitem.title+'<div>'+aitem.tag_list+'</div>'+
           '</a>'+
           '</p>'+
           '</div>'+
           '<div class="homepage-p">'+
           '<p>' +
-          '<a  target="_blank" href="'+ fn.articleUrlgen("blog",aitem.uid.toString(),"article="+aitem.id.toString()) +'" class="dui-text-warning">'+ aitem.introduce +'...<span style="color: #C13232">【查看详情】</span>'+
+          '<a  target="_blank" href="'+ fn.urlgen("case",aitem.id.toString()) +'" class="dui-text-warning">'+ aitem.introduce +'...<span style="color: #C13232">【查看详情】</span>'+
           '</a>'+
           '</p>'+
-          '<a  target="_blank" href="'+ fn.articleUrlgen("blog",aitem.uid.toString(),"article="+aitem.id.toString()) +'" class="dui-text-warning">'+
+          '<a  target="_blank" href="'+ fn.urlgen("case",aitem.id.toString()) +'" class="dui-text-warning">'+
           addArticleImg(aitem.img_list)+
           '</a>'+
           '<div style="width: 200px;line-height: 38px;float: left;position: relative">'+
@@ -235,8 +227,12 @@
           '<span id="shoucang_span_'+item.id+'">收藏<em id="shoucang_em_'+ item.id +'">'+ item.favorites +'</em></span>'+
           '</li>'+
           '<li onclick="showbottom(3, '+item.id+')" id="pinglun_li_'+item.id+'">'+
-          '<i class="iconfont " id="pinglun_'+item.id+'">&#xe61f;</i>'+
-          '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+ item.id +'">'+ item.comments +'</em></span>'+
+          '<a target="_blank" href="' + fn.urlgen("case", item.id.toString()) + '">'+
+          '<li onclick="" id="pinglun_li_'+item.id+'">'+
+          '<i class="iconfont " id="pinglun_'+item.id+'" style="color: #666">&#xe61f;</i>'+
+          '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+item.id+'">'+item.comments+'</em></span>'+
+          '</li>'+
+          '</a>'+
           '</li>'+
           '<li class="dian" onclick="showbottom(4, '+item.id+')" id="dianzan_li_'+item.id+'">'+
           '<i class="iconfont " id="dianzan_'+item.id+'">&#xe651;</i>'+
@@ -267,10 +263,10 @@
             var revList = revmsg.data.list;
             var len = revList.length;
             if (len == 0) {
-              thisObj.html('已展示全部收藏');
+              thisObj.html('已展示全部');
             }
             if (len < per_page) {
-              thisObj.html('已展示全部收藏');
+              thisObj.html('已展示全部');
               appendFav(revList);
               thisObj.data('page', page);
             }else {
@@ -293,7 +289,8 @@
       if(login_ss == undefined){
         layer.msg('你还没有登录')
         window.setTimeout(function(){
-          window.location.href =fn.curlgen('login','h='+window.location.href);
+          // window.location.href =fn.curlgen('login','h='+window.location.href);
+          getlogin();
         },1000);
         return false;
       }
