--- a/views/adviser_hot.html
+++ b/views/adviser_hot.html
@@ -37,6 +37,13 @@
       </div>
       {% esi helper.include(esikey,'fragment/guess_like','n='+country,'c='+tdk.cityid) %}
     </div>
+    <div style="margin-top: 20px;" class="dui-box-shadow">
+      <div class="common-title" style="border:1px solid #dcdcdc;">
+        <i></i>
+        <h3>相关顾问</h3>
+      </div>
+      {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+country,'c='+tdk.cityid) %}
+    </div>
   </div>
   <div class="dui-layout-div"></div>
   <div class="dui-layout-con left dui-box-shadow" style="border: 1px solid #eee;margin-left: 20px;margin-top: 20px;width: 878px;background: #fff">
@@ -70,7 +77,7 @@
   </div>
 </div>
 {% import "widget/new_slide/new_slide3.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo) }}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo,login_info) }}
 {% include "widget/new_footer/new_footer.html" %}
 <script>
   var login_ss = null;
@@ -80,7 +87,7 @@
 </script>
 <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan_zhuye.js"></script>
 <!--<script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>-->
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
@@ -128,8 +135,8 @@
     function appendArticleItem(aitem) {
       var aItemHtml = '<div class="homepage">' +
           '<div class="homepagecon">' +
-          '<a target="_blank"  href="' + fn.urlgen("blog", aitem.uid.toString()) + '" >'+
-          '<div class="homepageing" style="background:url(' + fn.avaterimg(aitem.uid, 'small', aitem.user_info.status, aitem.user_info.version) + ') no-repeat 0 0;background-size: 50px 50px;"></div>' +
+          '<a target="_blank"  href="' + fn.urlgen( aitem.uid.toString()) + '" >'+
+          '<div class="homepageing" style="background:url(' + fn.avaterimg(aitem.uid, 'small', aitem.user_info.status, aitem.user_info.version) + ') no-repeat 0 0;background-size: cover"></div>' +
           '<h3>' + aitem.user_info.realname + '<img src="'+ ajaxUrlPrefix.cdnhost +'/assets/img/1v.png" alt=""></h3>' +
           '</a>'+
           '<ul>' +
@@ -148,27 +155,27 @@
       if(aitem.type==1){
         aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("case", aitem.id.toString()) + '" class="dui-text-warning">' + aitem.title + '<div></a>' + aitem.tag_list + '</div>';
       }else if(aitem.type==2){
-        aItemHtml+= '<a  target="_blank" href="' + fn.articleUrlgen("blog", aitem.uid.toString(), "article=" + aitem.id.toString()) + '" class="dui-text-warning">' + aitem.title + '<div></a>' + aitem.tag_list + '</div>';
+        aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("article",aitem.id.toString()) + '" class="dui-text-warning">' + aitem.title + '<div></a>' + aitem.tag_list + '</div>';
       }
       aItemHtml+=  '</p>' +
           '</div>' +
           '<div class="homepage-p">' +
           '<p>' ;
       if(aitem.type==1){
-        aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("case", aitem.id.toString()) + '" class="dui-text-warning">' + aitem.introduce + '<span style="color: #C13232">...【查看详情】</span>' +
+        aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("case",aitem.id.toString())+ '" class="dui-text-warning">' + aitem.introduce + '<span style="color: #C13232">...【查看详情】</span>' +
             '</a>' ;
       }else if(aitem.type==2){
-        aItemHtml+= '<a  target="_blank" href="' + fn.articleUrlgen("blog", aitem.uid.toString(), "article=" + aitem.id.toString()) + '" class="dui-text-warning">' + aitem.introduce + '<span style="color: #C13232">...【查看详情】</span>' +
+        aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("article",aitem.id.toString()) + '" class="dui-text-warning">' + aitem.introduce + '<span style="color: #C13232">...【查看详情】</span>' +
             '</a>' ;
       }
       aItemHtml+=  '</p>' +
           '<p>' ;
       if(aitem.type==1){
-        aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("case", aitem.id.toString()) + '" class="dui-text-warning">' +
+        aItemHtml+= '<a  target="_blank" href="' +fn.urlgen("case",aitem.id.toString()) + '" class="dui-text-warning">' +
             addArticleImg(aitem.img_list) +
             '</a>' ;
       }else if(aitem.type==2){
-        aItemHtml+= '<a  target="_blank" href="' + fn.articleUrlgen("blog", aitem.uid.toString(), "article=" + aitem.id.toString()) + '" class="dui-text-warning">' +
+        aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("article",aitem.id.toString()) + '" class="dui-text-warning">' +
             addArticleImg(aitem.img_list) +
             '</a>' ;
       }
@@ -249,10 +256,10 @@
             var revList = revmsg.data.list;
             var len = revList.length;
             if (len == 0) {
-              thisObj.html('已展示全部收藏');
+              thisObj.html('已展示全部');
             }
             if (len < per_page) {
-              thisObj.html('已展示全部收藏');
+              thisObj.html('已展示全部');
               appendFav(revList);
               thisObj.data('page', page);
             } else {
@@ -275,7 +282,8 @@
       if (login_ss == undefined) {
         layer.msg('你还没有登录')
         window.setTimeout(function () {
-          window.location.href = fn.curlgen('login', 'h=' + window.location.href);
+          // window.location.href = fn.curlgen('login', 'h=' + window.location.href);
+          getlogin();
         }, 1000);
         return false;
       }
