--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -21,13 +21,13 @@
     <div class="clearfix" style="margin-top: 20px">
       {% import "widget2/community_advisor/community_advisor.html" as community_advisor %}
       {% if userinfo.status == 1 %} {#离职#}
-        {{ community_advisor.advisor_leave(userinfo,helper,login_info) }}
+      {{ community_advisor.advisor_leave(userinfo,helper,login_info) }}
       {% else %} {#在职#}
-        {% if userinfo.usertype == 2 %}
-        {{ community_advisor.advisor(userinfo,helper,login_info) }}
-        {% elif userinfo.usertype == 3 %}
-        {{ community_advisor.counsellor(userinfo,helper,login_info) }}
-        {% endif %}
+      {% if userinfo.usertype == 2 %}
+      {{ community_advisor.advisor(userinfo,helper,login_info) }}
+      {% elif userinfo.usertype == 3 %}
+      {{ community_advisor.counsellor(userinfo,helper,login_info) }}
+      {% endif %}
       {% endif %}
     </div>
     <div style="margin-top: 20px;" class="dui-box-shadow">
@@ -37,29 +37,36 @@
       </div>
       {% esi helper.include(esikey,'fragment/guess_like','n='+country,'c='+tdk.cityid) %}
     </div>
+    <div style="margin-top: 20px;" class="dui-box-shadow">
+      <div class="common-title" style="border:1px solid #dcdcdc;">
+        <i></i>
+        <h3>相关顾问</h3>
+      </div>
+      {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+country,'c='+tdk.cityid) %}
+    </div>
   </div>
   <div class="dui-layout-div"></div>
   <div class="dui-layout-con left dui-box-shadow" style="border: 1px solid #eee;margin-left: 20px;margin-top: 20px;width: 878px;background: #fff">
     <div class="" style="margin-top: 20px">
-    <div>
-      {% import "widget2/community_nav/community_nav.html" as community_nav %}
-      {% if userinfo.status == 1 %} {#离职顾问#}
+      <div>
+        {% import "widget2/community_nav/community_nav.html" as community_nav %}
+        {% if userinfo.status == 1 %} {#离职顾问#}
         {{community_nav.adviser_nav_leave('主页', userinfo.uid, helper)}}
-      {% else %} {#在职顾问#}
+        {% else %} {#在职顾问#}
         {% if userinfo.usertype == 2 %}
         {{community_nav.adviser_nav('主页', userinfo.uid, helper)}}
         {% elif userinfo.usertype == 3 %}
         {{community_nav.canzan_nav('主页', userinfo.uid, helper)}}
         {% endif %}
-      {% endif %}
-    </div>
+        {% endif %}
+      </div>
       {% if guwen_list.list.length > 0 %}
       <div class="right-main clearfix">
-          {% for item in guwen_list.list %}
-              {% import "widget2/article/article.html" as article_show %}
-              {{ article_show.article_show(item, helper) }}
+        {% for item in guwen_list.list %}
+        {% import "widget2/article/article.html" as article_show %}
+        {{ article_show.article_show(item, helper) }}
 
-              {% include "widget2/bottom_comment/bottom_comment_zhuanlan_zhuye.html" %}
+        {% include "widget2/bottom_comment/bottom_comment_zhuanlan_zhuye.html" %}
 
         {% endfor %}
       </div>
@@ -74,17 +81,17 @@
   </div>
 </div>
 {% import "widget/new_slide/new_slide3.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo) }}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo,login_info) }}
 {% include "widget/new_footer/new_footer.html" %}
 <script>
-  var login_ss = null; 
+  var login_ss = null;
   if($.cookie('login_ss') != undefined){
-    login_ss = JSON.parse($.cookie('login_ss'));  
+    login_ss = JSON.parse($.cookie('login_ss'));
   }
 </script>
 <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan_zhuye.js"></script>
 <!--<script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>-->
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
@@ -126,7 +133,7 @@
       intervalTime: 5000,
       slidesPerView: 2,
       slidesPerGroup: 2,
-          pagination: true
+      pagination: true
     });
 
     $('.loadMore').on('click', function () {
@@ -149,10 +156,10 @@
             var revList = revmsg.data.list;
             var len = revList.length;
             if (len == 0) {
-              thisObj.html('已展示全部收藏');
+              thisObj.html('已展示全部');
             }
             if (len < per_page) {
-              thisObj.html('已展示全部收藏');
+              thisObj.html('已展示全部');
               appendFav(revList);
               thisObj.data('page', page);
             } else {
@@ -174,58 +181,59 @@
   //明星顾问轮播
   function appendArticleItem(aitem) {
     var aItemHtml = '<div class="homepage">' +
-      '<div class="homepagecon">' +
-      '<a target="_blank"  href="' + fn.urlgen("blog", aitem.uid.toString()) + '" >'+
-      '<div class="homepageing" style="background:url(' + fn.avaterimg(aitem.uid, 'small', aitem.user_info.status, aitem.user_info.version) + ') no-repeat 0 0;background-size: 50px 50px;"></div>' +
-      '<h3>' + aitem.user_info.realname + '<img src="'+ ajaxUrlPrefix.cdnhost +'/assets/img/1v.png" alt=""></h3>' +
-      '</a>'+
-      '<ul>' +
-      '<div class="bdsharebuttonbox bdshare-button-style0-16" style="margin-top: 12px;">' +
-      '<a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>' +
-      '<a href="#" class="bds_weixin weixin-pengyouquan" data-cmd="weixin" title="分享到微信朋友圈"></a>'+
-      '<a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>' +
-      '<a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ"></a>' +
-      '<div class="report-btn" style="color: #666;font-size: 12px;float: left;margin-top: 6px;margin-right: 5px;" data-artId="'+aitem.id+'">举报</div>' +
-      '</div>' +
-      '</div>' +
-      '</ul>' +
-      '</div>' +
-      '<div class="homepage-title">' +
-      '<p>' ;
+        '<div class="homepagecon">' +
+        '<a target="_blank"  href="' + fn.urlgen("blog", aitem.uid.toString()) + '" >'+
+        '<div class="homepageing" style="background:url(' + fn.avaterimg(aitem.uid, 'small', aitem.user_info.status, aitem.user_info.version) + ') no-repeat 0 0;background-size: cover;"></div>' +
+        '<h3>' + aitem.user_info.realname + '<img src="'+ ajaxUrlPrefix.cdnhost +'/assets/img/1v.png" alt=""></h3>' +
+        '</a>'+
+        '<ul>' +
+        '<div class="bdsharebuttonbox bdshare-button-style0-16" style="margin-top: 12px;">' +
+        '<a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>' +
+        '<a href="#" class="bds_weixin weixin-pengyouquan" data-cmd="weixin" title="分享到微信朋友圈"></a>'+
+        '<a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>' +
+        '<a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ"></a>' +
+        '<div class="report-btn" style="color: #666;font-size: 12px;float: left;margin-top: 6px;margin-right: 5px;" data-artId="'+aitem.id+'">举报</div>' +
+        '</div>' +
+        '</div>' +
+        '</ul>' +
+        '</div>' +
+        '<div class="homepage-title">' +
+        '<p>' ;
     if(aitem.type==1){
       aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("case", aitem.id.toString()) + '" class="dui-text-warning">' + aitem.title + '<div></a>' + aitem.tag_list + '</div>';
     }else if(aitem.type==2){
-      aItemHtml+= '<a  target="_blank" href="' + fn.articleUrlgen("blog", aitem.uid.toString(), "article=" + aitem.id.toString()) + '" class="dui-text-warning">' + aitem.title + '<div></a>' + aitem.tag_list + '</div>';
+      aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("article", aitem.id.toString()) + '" class="dui-text-warning">' +
+          '</a>' ;
     }
     aItemHtml+=  '</p>' +
-      '</div>' +
-      '<div class="homepage-p">' +
-      '<p>' ;
+        '</div>' +
+        '<div class="homepage-p">' +
+        '<p>' ;
     if(aitem.type==1){
       aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("case", aitem.id.toString()) + '" class="dui-text-warning">' + aitem.introduce + '...<span style="color: #C13232">【查看详情】</span>' +
-        '</a>' ;
+          '</a>' ;
     }else if(aitem.type==2){
-      aItemHtml+= '<a  target="_blank" href="' + fn.articleUrlgen("blog", aitem.uid.toString(), "article=" + aitem.id.toString()) + '" class="dui-text-warning">' + aitem.introduce + '...<span style="color: #C13232">【查看详情】</span>' +
-        '</a>' ;
+      aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("article", aitem.id.toString()) + '" class="dui-text-warning">' +
+          '</a>' ;
     }
     aItemHtml+=  '</p>' +
-      '<p>' ;
+        '<p>' ;
     if(aitem.type==1){
       aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("case", aitem.id.toString()) + '" class="dui-text-warning">' +
-        addArticleImg(aitem.img_list) +
-        '</a>' ;
+          addArticleImg(aitem.img_list) +
+          '</a>' ;
     }else if(aitem.type==2){
-      aItemHtml+= '<a  target="_blank" href="' + fn.articleUrlgen("blog", aitem.uid.toString(), "article=" + aitem.id.toString()) + '" class="dui-text-warning">' +
-        addArticleImg(aitem.img_list) +
-        '</a>' ;
+      aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("article", aitem.id.toString()) + '" class="dui-text-warning">' +
+          addArticleImg(aitem.img_list) +
+          '</a>' ;
     }
     aItemHtml+=  '</p>' +
-      '<div style="width: 200px;line-height: 38px;float: left;position: relative">'+
-      '<div style="float: left;position: absolute;">'+aitem.add_time+'</div>'+
-      '</div>'+
-      '</div>' +
-      '</div>' +
-      addBottom(aitem);
+        '<div style="width: 200px;line-height: 38px;float: left;position: relative">'+
+        '<div style="float: left;position: absolute;">'+aitem.add_time+'</div>'+
+        '</div>'+
+        '</div>' +
+        '</div>' +
+        addBottom(aitem);
     return aItemHtml;
   }
 
@@ -255,25 +263,36 @@
 
   function addBottom(item) {
     var html = '<div class="bot_comment clearfix">' +
-      '<ul>' +
-      '<li onclick="showbottom(1, ' + item.id + ')" id="yuedu_li_' + item.id + '">' +
-      '<i class="iconfont " id="yuedu_' + item.id + '">&#xe9ca;</i>' +
-      '<span id="yuedu_span_' + item.id + '">阅读<em id="yuedu_em_' + item.id + '">' + item.views + '</em></span>' +
-      '</li>' +
-      '<li onclick="showbottom(2, ' + item.id + ')" id="shoucang_li_' + item.id + '">' +
-      '<i class="iconfont " id="shoucang_' + item.id + '">&#xe7ed;</i>' +
-      '<span id="shoucang_span_' + item.id + '">收藏<em id="shoucang_em_' + item.id + '">' + item.favorites + '</em></span>' +
-      '</li>' +
-      '<li onclick="showbottom(3, ' + item.id + ')" id="pinglun_li_' + item.id + '">' +
-      '<i class="iconfont " id="pinglun_' + item.id + '">&#xe61f;</i>' +
-      '<span id="pinglun_span_' + item.id + '">评论<em id="pinglun_em_' + item.id + '">' + item.comments + '</em></span>' +
-      '</li>' +
-      '<li class="dian" onclick="showbottom(4, ' + item.id + ')" id="dianzan_li_' + item.id + '">' +
-      '<i class="iconfont " id="dianzan_' + item.id + '">&#xe651;</i>' +
-      '<span id="dianzan_span_' + item.id + '">点赞<em id="dianzan_em_' + item.id + '">' + item.votes + '</em></span>' +
-      '</li>' +
-      '</ul>' +
-      '</div>';
+        '<ul>' +
+        '<li onclick="showbottom(1, ' + item.id + ')" id="yuedu_li_' + item.id + '">' +
+        '<i class="iconfont " id="yuedu_' + item.id + '">&#xe9ca;</i>' +
+        '<span id="yuedu_span_' + item.id + '">阅读<em id="yuedu_em_' + item.id + '">' + item.views + '</em></span>' +
+        '</li>' +
+        '<li onclick="showbottom(2, ' + item.id + ')" id="shoucang_li_' + item.id + '">' +
+        '<i class="iconfont " id="shoucang_' + item.id + '">&#xe7ed;</i>' +
+        '<span id="shoucang_span_' + item.id + '">收藏<em id="shoucang_em_' + item.id + '">' + item.favorites + '</em></span>' +
+        '</li>' ;
+        if (item.type == 2){
+        html += '<a target="_blank" href="' + fn.urlgen("article", item.id.toString()) + '">'+
+        '<li onclick="" id="pinglun_li_'+item.id+'">'+
+        '<i class="iconfont " id="pinglun_'+item.id+'" style="color: #666">&#xe61f;</i>'+
+        '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+item.id+'">'+item.comments+'</em></span>'+
+        '</li>'+
+        '</a>';
+        } else {
+        html += '<a target="_blank" href="' + fn.urlgen("case", item.id.toString()) + '">'+
+        '<li onclick="" id="pinglun_li_'+item.id+'">'+
+        '<i class="iconfont " id="pinglun_'+item.id+'" style="color: #666">&#xe61f;</i>'+
+        '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+item.id+'">'+item.comments+'</em></span>'+
+        '</li>'+
+        '</a>';
+    }
+        html += '<li class="dian" onclick="showbottom(4, ' + item.id + ')" id="dianzan_li_' + item.id + '">' +
+        '<i class="iconfont " id="dianzan_' + item.id + '">&#xe651;</i>' +
+        '<span id="dianzan_span_' + item.id + '">点赞<em id="dianzan_em_' + item.id + '">' + item.votes + '</em></span>' +
+        '</li>' +
+        '</ul>' +
+        '</div>';
     return html;
   }
   function report() {
@@ -281,7 +300,8 @@
     if (login_ss == undefined) {
       layer.msg('你还没有登录')
       window.setTimeout(function () {
-        window.location.href = fn.curlgen('login', 'h=' + window.location.href);
+        // window.location.href = fn.curlgen('login', 'h=' + window.location.href);
+        getlogin();
       }, 1000);
       return false;
     }
