--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -44,16 +44,16 @@
     <div style="margin-top: 20px;" class="dui-box-shadow">
       <div class="common-title" style="border:1px solid #dcdcdc;">
         <i></i>
-        <h3>作者精选</h3>
+        <h3>猜你喜欢</h3>
       </div>
-      {% esi helper.include(esikey,'fragment/author_selection','uid='+to_uid) %}
+      {% esi helper.include(esikey,'fragment/guess_like','n='+country,'c='+tdk.cityid) %}
     </div>
     <div style="margin-top: 20px;" class="dui-box-shadow">
       <div class="common-title" style="border:1px solid #dcdcdc;">
         <i></i>
-        <h3>猜你喜欢</h3>
+        <h3>相关顾问</h3>
       </div>
-      {% esi helper.include(esikey,'fragment/guess_like','n='+country,'c='+tdk.cityid) %}
+      {% esi helper.include(esikey,'fragment/xiangguanguwen','n='+country,'c='+tdk.cityid) %}
     </div>
   </div>
   <div class="dui-layout-div"></div>
@@ -93,7 +93,7 @@
   </div>
 </div>
 {% import "widget/new_slide/new_slide3.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo) }}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo,login_info) }}
 {% include "widget/new_footer/new_footer.html" %}
 <script>
   var login_ss = null; 
@@ -109,7 +109,7 @@
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan_zhuye.js"></script>
 <script>
   $(function(){
     window._bd_share_config = {
@@ -150,8 +150,8 @@
     function appendArticleItem (aitem) {
       var aItemHtml = '<div class="homepage">'+
           '<div class="homepagecon">'+
-          '<a target="_blank"  href="' + fn.urlgen("blog", aitem.uid.toString()) + '" >'+
-          '<div class="homepageing" style="background:url('+fn.avaterimg(aitem.uid,'small',aitem.user_info.status,aitem.user_info.version)+') no-repeat 0 0;background-size: 50px 50px;"></div>'+
+          '<a target="_blank"  href="' + fn.urlgen(aitem.uid.toString()) + '" >'+
+          '<div class="homepageing" style="background:url('+fn.avaterimg(aitem.uid,'small',aitem.user_info.status,aitem.user_info.version)+') no-repeat 0 0;background-size: cover;"></div>'+
           '<h3>'+ aitem.user_info.realname +'<img src="'+ ajaxUrlPrefix.cdnhost +'/assets/img/1v.png" alt=""></h3>'+
           '</a>'+
           '<ul>'+
@@ -167,16 +167,16 @@
           '</div>'+
           '<div class="homepage-title">'+
           '<p>'+
-          '<a  target="_blank" href="'+ fn.articleUrlgen("blog",aitem.uid.toString(),"case="+aitem.id.toString()) +'" class="dui-text-warning">'+aitem.title+'<div>'+aitem.tag_list+'</div>'+
+          '<a  target="_blank" href="'+ fn.urlgen("article",aitem.id.toString()) +'" class="dui-text-warning">'+aitem.title+'<div>'+aitem.tag_list+'</div>'+
           '</a>'+
           '</p>'+
           '</div>'+
           '<div class="homepage-p">'+
           '<p>' +
-          '<a  target="_blank" href="'+ fn.articleUrlgen("blog",aitem.uid.toString(),"case="+aitem.id.toString()) +'" class="dui-text-warning">'+ aitem.introduce +'...<span style="color: #C13232">【查看详情】</span>'+
+          '<a  target="_blank" href="'+ fn.urlgen("article",aitem.id.toString()) +'" class="dui-text-warning">'+ aitem.introduce +'...<span style="color: #C13232">【查看详情】</span>'+
           '</a>'+
           '</p>'+
-          '<a  target="_blank" href="'+ fn.articleUrlgen("blog",aitem.uid.toString(),"case="+aitem.id.toString()) +'" class="dui-text-warning">'+
+          '<a  target="_blank" href="'+ fn.urlgen("article",aitem.id.toString()) +'" class="dui-text-warning">'+
           addArticleImg(aitem.img_list)+
           '</a>'+
           '<div style="width: 200px;line-height: 38px;float: left;position: relative">'+
@@ -219,8 +219,12 @@
           '<span id="shoucang_span_'+item.id+'">收藏<em id="shoucang_em_'+ item.id +'">'+ item.favorites +'</em></span>'+
           '</li>'+
           '<li onclick="showbottom(3, '+item.id+')" id="pinglun_li_'+item.id+'">'+
-          '<i class="iconfont " id="pinglun_'+item.id+'">&#xe61f;</i>'+
-          '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+ item.id +'">'+ item.comments +'</em></span>'+
+          '<a target="_blank" href="' + fn.urlgen("article", item.id.toString()) + '">'+
+          '<li onclick="" id="pinglun_li_'+item.id+'">'+
+          '<i class="iconfont " id="pinglun_'+item.id+'" style="color: #666">&#xe61f;</i>'+
+          '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+item.id+'">'+item.comments+'</em></span>'+
+          '</li>'+
+          '</a>'+
           '</li>'+
           '<li class="dian" onclick="showbottom(4, '+item.id+')" id="dianzan_li_'+item.id+'">'+
           '<i class="iconfont " id="dianzan_'+item.id+'">&#xe651;</i>'+
@@ -251,10 +255,10 @@
             var revList = revmsg.data.list;
             var len = revList.length;
             if (len == 0) {
-              thisObj.html('已展示全部收藏');
+              thisObj.html('已展示全部');
             }
             if (len < per_page) {
-              thisObj.html('已展示全部收藏');
+              thisObj.html('已展示全部');
               appendFav(revList);
               thisObj.data('page', page);
             }else {
@@ -277,7 +281,8 @@
       if(login_ss == undefined){
         layer.msg('你还没有登录')
         window.setTimeout(function(){
-          window.location.href =fn.curlgen('login','h='+window.location.href);
+          // window.location.href =fn.curlgen('login','h='+window.location.href);
+          getlogin();
         },1000);
         return false;
       }
