--- a/views/widget2/bottom_comment/bottom_comment_zhuanlan_zhuye.html
+++ b/views/widget2/bottom_comment/bottom_comment_zhuanlan_zhuye.html
@@ -9,15 +9,15 @@
       <i class="iconfont " id="shoucang_{{item.id}}">&#xe7ed;</i>
       <span id="shoucang_span_{{item.id}}">收藏<em id="shoucang_em_{{item.id}}">{{item.favorites}}</em></span>
     </li>
-    {% if item.type == 2 %}
-    <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}">
+    {% if item.type == 1 %}
+    <a target="_blank" href="{{helper.urlgen('case',item.id | string)}}">
     <li onclick="showbottom(3, {{item.id}}, {{userinfo.usertype}})" id="pinglun_li_{{item.id}}">
       <i class="iconfont " id="pinglun_{{item.id}}" style="color: #666">&#xe61f;</i>
       <span id="pinglun_span_{{item.id}}">评论<em id="pinglun_em_{{item.id}}">{{item.comments}}</em></span>
     </li>
     </a>
     {% else %}
-    <a target="_blank" href="{{helper.urlgen('case', item.id | string)}}">
+    <a target="_blank" href="{{helper.urlgen('article', item.id | string)}}">
       <li onclick="showbottom(3, {{item.id}}, {{userinfo.usertype}})" id="pinglun_li_{{item.id}}">
         <i class="iconfont " id="pinglun_{{item.id}}" style="color: #666">&#xe61f;</i>
         <span id="pinglun_span_{{item.id}}">评论<em id="pinglun_em_{{item.id}}">{{item.comments}}</em></span>
