修改文章底页

--- a/views/widget2/article/article.css
+++ b/views/widget2/article/article.css
@@ -3,13 +3,13 @@
 }
 
 .art-box .adviser-head{
-    width:60px;
-    height:76px;
+    width:50px;
+    height:50px;
     float:left;
     margin-right:20px;
+    border-radius: 50%;
 
 }
-
 
 .art-box .adviser-info{
     float:left;
