--- a/views/center_article.html
+++ b/views/center_article.html
@@ -179,11 +179,11 @@
             }else if(aitem.user_info.usertype ==3){
               identity = 'canzan';
             }
-            aItemHtml += '<div class="art-box clearfix" ><a target="_blank" href="'+ fn.curlgen(identity+"_center/article/" + aitem.id) +'"><div class="adviser-head" style="background:url('+fn.avaterimg(aitem.uid,'small',aitem.user_info.status,aitem.user_info.version)+') no-repeat 0 0;background-size: 60px 76px;"></div></a>';
+            aItemHtml += '<div class="art-box clearfix" ><a target="_blank" href="'+ fn.urlgen(aitem.uid.toString()) +'"><div class="adviser-head" style="background:url('+fn.avaterimg(aitem.uid,'small',aitem.user_info.status,aitem.user_info.version)+') no-repeat 0 0;background-size: 60px 76px;"></div></a>';
             aItemHtml += '<div class="adviser-info" ><div class="adviser-info-name" >'+ aitem.user_info.realname +'</div><div class="adviser-info-date clearfix" ><span class="adviser-info-date-s">'+ aitem.add_time +'</span><span style="padding: 0 10px;height: 24px;float: left;margin-left: 20px;background: url("{{helper.cdnhost}}/assets/img/yanse.png");background-size:cover ;border-radius:12px ;margin-top: -3px;text-align: center;line-height: 24px;color: #C13232;">'+ aitem.tag_list +'</span></div><div class="adviser-info-title">'+ aitem.title +'</div>';
             aItemHtml += '<div class="offer-opt-bar clearfix"><div class="opt-btn red-border delete"  onclick="deleteOffer($(this), '+aitem.uid+',' +aitem.id+')"><i class="iconfont">&#xe8c1;</i><span>删除</span></div><div class="opt-btn edit"><i class="iconfont">&#xe61c;</i><a target="_blank" href="'+  fn.curlgen("advisor_center/postarticle/" + aitem.id)+'">编辑</a></div></div>';
-            aItemHtml += '<div class="offer-xialas"><span class="offer-xialadd iconfont">&#xe60b;</span><ul class="offer-xiala"><li><a  class="dui-text-warning-s report-btn" data-artId="'+aitem.id+'" data-catid="'+aitem.category_id+'">举报</a></li><li><a  class="dui-text-warning-s share-btn" data-url="'+fn.urlgen('article',aitem.id.toString())+'" data-title ="'+aitem.title+'">分享</a></li></ul></div>';
-            aItemHtml += ' <p class="adviser-info-p"><a target="_blank" href="'+ fn.curlgen(identity+"_center/article/" + aitem.id) +'" class="dui-text-warning">'+ aitem.introduce +'<span>【查看详情】</span></a></p>';
+           
+            aItemHtml += ' <p class="adviser-info-p"><a target="_blank" href="'+ fn.urlgen("article",aitem.id.toString()) +'" class="dui-text-warning">'+ aitem.introduce +'<span>【查看详情】</span></a></p>';
             aItemHtml += addArticleImg(aitem.img_list);
             aItemHtml += '</div></div>';
           aItemHtml += '<div class="bot_comment clearfix"><ul><li onclick="showbottom(1, '+aitem.id+')" id="yuedu_li_'+aitem.id+'"><i class="iconfont " id="yuedu_'+aitem.id+'">&#xe9ca;</i><span id="yuedu_span_'+aitem.id+'">阅读（<em id="yuedu_em_'+ aitem.id +'">'+ aitem.views +'</em>）</span></li><li onclick="showbottom(2, '+aitem.id+')" id="shoucang_li_'+aitem.id+'"><i class="iconfont " id="shoucang_'+aitem.id+'">&#xe7ed;</i><span id="shoucang_span_'+aitem.id+'">收藏（<em id="shoucang_em_'+ aitem.id +'">'+ aitem.favorites +'</em>）</span></li><li onclick="showbottom(3, '+aitem.id+')" id="pinglun_li_'+aitem.id+'"><i class="iconfont " id="pinglun_'+aitem.id+'">&#xe61f;</i><span id="pinglun_span_'+aitem.id+'">评论（<em id="pinglun_em_'+ aitem.id +'">'+ aitem.comments +'</em>）</span></li><li class="dian" onclick="showbottom(4, '+aitem.id+')" id="dianzan_li_'+aitem.id+'"><i class="iconfont " id="dianzan_'+aitem.id+'">&#xe651;</i><span id="dianzan_span_'+aitem.id+'">点赞（<em id="dianzan_em_'+ aitem.id +'">'+ aitem.votes +'</em>）</span></li></ul></div>';
@@ -203,8 +203,6 @@
                 artHtml += appendArticleItem(artList[i]);
             }
             $('.right-main').append($(artHtml));
-            $('.report-btn').on("click",report); //点击举报
-            $('.share-btn').on('click',share); //点击分享
         }
         $('.loadMore').on('click', function () {
             var page = $(this).data('page')*1+1;
@@ -248,109 +246,6 @@
                 }
             })
         })
-        $('.report-btn').on("click",report); //点击举报
-        $('.share-btn').on('click',share); //点击分享
-        function report(){
-            //举报调取函数
-            var report_content = null;
-            var that =this;
-            layer.open({
-                type: 1,
-                title:'举报理由',
-                area: ['700px'], //宽高
-                content:'<div class="report-con">'+
-                           '<ul class="report-ul clearfix">'+
-                             '<li>'+
-                               '<span class="circle"></span>'+
-                               '<i class="iconfont">&#xe62a;</i>'+
-                               '<span class="sp-con">垃圾、广告信息</span>'+
-                              '</li>'+
-                              '<li>'+
-                                '<span class="circle"></span>'+
-                                '<i class="iconfont">&#xe62a;</i>'+
-                                '<span class="sp-con">色情、低俗内容</span>'+
-                              '</li>'+
-                              '<li>'+
-                                '<span class="circle"></span>'+
-                                '<i class="iconfont">&#xe62a;</i>'+
-                                '<span class="sp-con">时政敏感话题</span>'+
-                              '</li>'+
-                              '<li>'+
-                                '<span class="circle"></span>'+
-                                '<i class="iconfont">&#xe62a;</i>'+
-                                '<span class="sp-con">其它原因</span>'+
-                              '</li>'+
-                            '</ul>'+
-                            '<textarea class="report-txt"></textarea>'+
-                        '</div>',
-                btn:'确定',
-                closeBtn:'2',
-                yes: function(index, layero){
-                  if(report_content ==undefined || report_content == ''){
-                    layer.msg('请选择举报理由');
-                    return false;
-                  }
-                  $.ajax({
-                    // url: ajaxUrlPrefix.cmsapi+'/api/userReport',
-                    url:'/soapi/userReport',
-                    type:'POST',
-                    data:{
-                      report_source:'1',
-                      report_type:'1',
-                      report_content:report_content,
-                      userid:login_ss.uid,
-                      artecle_id:$(that).attr("data-artId"),
-                      catid:$(that).attr("data-catid")
-                    },
-                    dataType:'json',
-                    // crossDomain: true == !(document.all),
-                    jsonpCallback:'callback',
-                    success:function(result){
-                      console.log(result)
-                      if(result.code == 0){
-                        layer.msg('举报成功');
-                        layer.close(index); 
-                      }
-                    },
-                    error:function(XMLHttpRequest, textStatus, errorThrown){
-                      console.log(errorThrown)
-                    }  
-                  });
-                }         
-            });
-            $(".report-ul li").on("click",function(){
-                //选择举报内容
-                $(".report-ul li i").hide();
-                $(".report-ul li .circle").show();
-                $(this).find("i").show();
-                $(this).find(".circle").hide();
-                if($(this).index() == 3){
-                  $(".report-txt").show();
-                  $(".layui-layer-content").css({"height":"115px"});
-                }else{
-                  $(".report-txt").hide();
-                  $(".layui-layer-content").css({"height":"39px"});
-                  report_content = $(this).find('.sp-con').text();
-                }
-            });
-            $('.report-txt').on('change',function(){
-                if($('.report-txt').val()!= ''){
-                  report_content = $('.report-txt').val();
-                }else{
-                   report_content ='';
-                }
-            });
-        }
-        function share(){
-          //调取分享函数
-            var that =this;
-            layer.open({
-              type: 2,
-              title: '分享到',
-              area: ['262px', '327px'],
-              content: ['/share?title='+encodeURI($(that).attr('data-title'))+'&url='+$(that).attr('data-url'), 'no']
-            });
-        }
     })
   </script>
 </body>
