--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -102,7 +102,7 @@
 {% macro article_edit(item,helper) %}
 <div class="art-box clearfix" >
   <a target="_blank" href="{{helper.urlgen(item.uid | string)}}">
-    <div class="adviser-head" style="background:url({{helper.avaterimg(item.uid, 'small',item.user_info.status,item.user_info.version)}}) no-repeat 0 0;background-size: 60px 76px;">
+    <div class="adviser-head" style="background:url({{helper.avaterimg(item.uid, 'small',item.user_info.status,item.user_info.version)}}) no-repeat 0 0;background-size: 50px 50px;">
     </div>
   </a>
   <div class="adviser-info" >
@@ -115,9 +115,9 @@
     </div>
     <div class="adviser-info-title">
       {%if item.type==1%}
-      <a target="_blank" href="{% if item.user_info.usertype == 2 %}{{helper.urlgen('advisor_center/case', item.id | string)}}{% elif item.user_info.usertype == 3 %}{{helper.urlgen('canzan_center/case', item.id | string)}}{% endif %}" style="color: #C13232">{{item.title}}</a>
+      <a target="_blank" href="{% if item.user_info.usertype == 2 %}{{helper.urlgen('case', item.id | string)}}{% elif item.user_info.usertype == 3 %}{{helper.urlgen('case', item.id | string)}}{% endif %}" style="color: #C13232">{{item.title}}</a>
       {%else %}
-      <a target="_blank" href="{% if item.user_info.usertype == 2 %}{{helper.urlgen('advisor_center/article', item.id | string)}}{% elif item.user_info.usertype == 3 %}{{helper.urlgen('canzan_center/article', item.id | string)}}{% endif %}" style="color: #C13232">{{item.title}}</a>
+      <a target="_blank" href="{% if item.user_info.usertype == 2 %}{{helper.urlgen('article', item.id | string)}}{% elif item.user_info.usertype == 3 %}{{helper.urlgen('article', item.id | string)}}{% endif %}" style="color: #C13232">{{item.title}}</a>
       {% endif%}
     </div>
     <div class="offer-opt-bar clearfix">
@@ -130,20 +130,13 @@
         <a target="_blank" href="{% if item.user_info.usertype == 2 %}{{helper.urlgen('advisor_center/postarticle', item.id | string)}}{% elif item.user_info.usertype == 3 %}{{helper.urlgen('canzan_center/postarticle', item.id | string)}}{% endif %}">编辑</a>
       </div>
     </div>
-    <div class="offer-xialas">
-      <span class="offer-xialadd iconfont">&#xe60b;</span>
-      <ul class="offer-xiala">
-        <li><a target="_blank" class="dui-text-warning-s report-btn" data-artId="{{item.id}}" data-catid="{{item.category_id}}">举报</a></li>
-        <li><a target="_blank" class="dui-text-warning-s share-btn" data-url="{{helper.urlgen('advisor_center/article',item.id | string) if item.type == 1 else helper.urlgen('advisor_center/case',item.id | string)}}" data-title ="{{item.title}}">分享</a></li>
-      </ul>
-    </div>
     <p class="adviser-info-p">
       {%if item.type==1%}
-      <a target="_blank" href="{% if item.user_info.usertype == 2 %}{{helper.urlgen('advisor_center/case', item.id | string)}}{% elif item.user_info.usertype == 3 %}{{helper.urlgen('canzan_center/case', item.id | string)}}{% endif %}" class="dui-text-warning" rel="nofollow">
+      <a target="_blank" href="{% if item.user_info.usertype == 2 %}{{helper.urlgen('case', item.id | string)}}{% elif item.user_info.usertype == 3 %}{{helper.urlgen('case', item.id | string)}}{% endif %}" class="dui-text-warning" rel="nofollow">
         {{item.introduce}} <span>【查看详情】</span>
       </a>
       {%else%}
-      <a target="_blank" href="{% if item.user_info.usertype == 2 %}{{helper.urlgen('advisor_center/article', item.id | string)}}{% elif item.user_info.usertype == 3 %}{{helper.urlgen('canzan_center/article', item.id | string)}}{% endif %}" class="dui-text-warning" rel="nofollow">
+      <a target="_blank" href="{% if item.user_info.usertype == 2 %}{{helper.urlgen('article', item.id | string)}}{% elif item.user_info.usertype == 3 %}{{helper.urlgen('article', item.id | string)}}{% endif %}" class="dui-text-warning" rel="nofollow">
         {{item.introduce}} <span>【查看详情】</span>
       </a>
       {% endif%}
