--- a/views/widget2/guess_like/guess_like.html
+++ b/views/widget2/guess_like/guess_like.html
@@ -9,7 +9,7 @@
               <span class="people-name" style="margin-top:0;margin-right:0;">{{item.user_info.realname}}</span>
               <span class="people-action" style="margin-top:0;float:right;">{{item.tag_list | stringSub()}}</span>
             </div>
-            <a style="margin:20px 0 10px 0" href="{{helper.urlgen('article',item.id | string) if item.type == 1 else helper.urlgen('case',item.id | string)}}">
+            <a style="margin:20px 0 10px 0" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">
               <div class="article">{{item.title | ellipsis(14) }}</div>
             </a>
         </li>
