--- a/views/so_article.html
+++ b/views/so_article.html
@@ -216,14 +216,14 @@
                         </div>
                         <div class="item-info">
                             <div class="info-top clearfix">
-                                <a class="info-title" href="{{helper.urlgen('article',item.id | string) if item.type == 1 else helper.urlgen('case',item.id | string)}}">{{item.title}}</a>
+                                <a class="info-title" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">{{item.title}}</a>
                                 <div class="info-tags">
                                     {% if item.tag_list %}
                                     <span>{{item.tag_list}}</span>
                                     {% endif %}
                                 </div>
                             </div>
-                            <div class="info-desc">{{item.introduce|ellipsis(90)}}<a href="{{helper.urlgen('article',item.id | string) if item.type == 1 else helper.urlgen('case',item.id | string)}}">【查看详情】</a></div>
+                            <div class="info-desc">{{item.introduce|ellipsis(90)}}<a href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">【查看详情】</a></div>
                             <div class="time">{{item.add_time | getDefaultFormat('YYYY-MM-DD HH:mm:ss')}}</div>
                         </div>
                     </div>
