--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -51,7 +51,8 @@
 							</a>
 							<span class="pepple-icon">{{item.user_info.realname}}<i></i></span>
 						</div>
-						<a href="{{helper.urlgen('article',item.id | string) if item.type == 1 else helper.urlgen('case',item.id | string)}}">
+						{#<p>{{item.type}}</p>#}
+						<a href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">
 							<div class="gw-legend gw-news">留学时讯</div>
 							<p style="clear:both">{{ item.title | ellipsis(21) }}</p>
 						</a>
@@ -71,7 +72,8 @@
 									</a>
 									<span class="pepple-icon"><em>{{item.user_info.realname}}</em><i></i></span>
 								</div>
-								<a href="{{helper.urlgen('article',item.id | string) if item.type == 1 else helper.urlgen('case',item.id | string)}}">
+								{#<p>{{item.type}}</p>#}
+								<a href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">
 									<div class="gw-legend">{{item.tag_list}}</div>
 									<p style="clear:both">{{item.title | ellipsis(13)}}</p>
 								</a>
