修改  修业页面样式

--- a/views/agreement.html
+++ b/views/agreement.html
@@ -34,6 +34,7 @@
     font-size: 18px;
     color: #333;
     line-height: 52px;
+    padding-top: 4px;
   }
   .agreement i {
     width: 3.5px;
@@ -45,6 +46,7 @@
   }
   .agreementcon {
     margin: 0 20px;
+    margin-top: -2px;
     border-top:1px solid #C13232 ;
   }
 </style>
