conter_collection update

--- a/views/center_collection.html
+++ b/views/center_collection.html
@@ -175,7 +175,7 @@
             intervalTime: 5000,
             slidesPerView : 2,
             slidesPerGroup : 2,
-            pagination: true
+            pagination: true,
         });
     })
   </script>
