--- a/views/widget2/guess_like/guess_like.html
+++ b/views/widget2/guess_like/guess_like.html
@@ -2,8 +2,7 @@
     <ul class="gw-likelist">
         {% for item in likelist.list %}
         <li>
-            <a href="{{helper.urlgen(item.uid|string)}}" style="display:inline-block;width:51px;height:51px;float:left;">
-              <img src="{{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}}" alt="" class="img-responsive">
+            <a href="{{helper.urlgen(item.uid|string)}}" style="display:inline-block;width:51px;height:51px;float:left;background: url({{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version) no-repeat 0 0;background-size: cover;}})">
             </a>
             <div class="likes-item" style="padding-top:12px;">
               <span class="people-name" style="margin-top:0;margin-right:0;">{{item.user_info.realname}}</span>
