--- a/views/widget/new_footer/new_footer.html
+++ b/views/widget/new_footer/new_footer.html
@@ -38,11 +38,23 @@
     </div>
     <div class="address">
       <h2>欢迎来访</h2>
-      <ol class="xiangxi-address one">
+      <ol class="xiangxi-address one" id="qita-city">
         <li><i class="iconfont">&#xe679;</i><span>400-010-8000</span></li>
         <li><i class="iconfont">&#xe611;</i><span id="tel">010-65685656</span></li>
         <li><i class="iconfont">&#xe603;</i><span id="address">北京市建国门外大街永安东里米阳大厦5层（永安里地铁C口向南50米) </span></li>
       </ol>
+      <ul class="xiangxi-address one clearfix" id="wc-hk" style="display: none;margin-bottom: 34px;" >
+        <li><i class="iconfont">&#xe679;</i><span>400-010-8000</span></li>
+        <div class="wuhan-address">
+          <li><i class="iconfont">&#xe611;</i><span>027-67811600</span></li>
+          <li><i class="iconfont">&#xe603;</i><span>武昌分公司：武汉市洪山区珞瑜路10号群光中心百脑汇23层 </span></li>
+        </div>
+       <div class="wuhan-address">
+         <li><i class="iconfont">&#xe611;</i><span>027-83805656</span></li>
+         <li><i class="iconfont">&#xe603;</i><span>汉口分公司：武汉市航空路新世界中心C座20层 </span></li>
+       </div>
+
+      </ul>
     </div>
     <p class="copyright">©2009金吉列出国留学咨询服务有限公司 &nbsp;版权所有&nbsp;京ICP备05010035号&nbsp;&nbsp;留学投诉电话：4006-213-315&nbsp;&nbsp;投诉邮箱：315@jjl.cn</p>
     <div class="adviser-login" onclick="adviserlogin()">
