--- a/views/agreement.html
+++ b/views/agreement.html
@@ -105,8 +105,25 @@
 
 <h2>四、 金吉列网站服务及规范</h2>
 <p>4.1责任限制</p>
-
-
+<p>【不可抗力及第三方原因】“金吉列”依照法律规定履行基础保障义务，但对于下述原因导致的合同履行障碍、履行瑕疵、履行迟延或履行内容变更等情形，“金吉列”并不承担相应的违约责任：</p>
+<p>（一）因自然灾害、罢工、暴乱、战争、政府行为、司法行政命令等不可抗力因素；</p>
+<p>（二）因电力供应故障、通讯网络故障等公共服务因素或第三人因素；</p>
+<p>（三）因常规或紧急的设备与系统维护、设备与系统故障、网络信息与数据安全等因素；</p>
+<p>4.2本协议约定的其他情形。</p>
+<p>【海量信息】“金吉列”仅向您提供金吉列网站服务，您了解金吉列网站上的信息系顾问自行发布，且可能存在瑕疵。“金吉列”将通过依法建立相关检查监控制度尽可能保障您在金吉列网站上的合法权益及良好体验。同时，鉴于金吉列网站具备存在海量信息，“金吉列”无法第一时间审核上线信息，如您在浏览信息时，发现信息存在问题，或违反法律法规的情况，请及时联系金吉列客服，我们会尽快对问题信息进行处理。</p>
+    <h2>五、 用户信息的保护及授权</h2>
+    <p>5.1个人信息的保护</p>
+    <p>“金吉列”非常重视用户个人信息（即能够独立或与其他信息结合后识别用户身份的信息）的保护，在您使用“金吉列”提供的服务时，您同意“金吉列”收集、存储、使用、披露和保护您的个人信息。</p>
+    <p>5.2非个人信息的保证与授权</p>
+    <p>【信息的发布】您声明并保证，您对您所发布的信息（包括但不限于留言，评论）拥有相应、合法的权利。否则，“金吉列”可对您发布的信息依法或依本协议进行删除或屏蔽。</p>
+    <p>【禁止性信息】您应当确保您所发布的信息不包含以下内容：</p>
+    <p>（一）违反国家法律法规禁止性规定的；</p>
+    <p>（二）政治宣传、封建迷信、淫秽、色情、赌博、暴力、恐怖或者教唆犯罪的；</p>
+    <p>（三）欺诈、虚假、不准确或存在误导性的；</p>
+    <p>（四）侵犯他人知识产权或涉及第三方商业秘密及其他专有权利的；</p>
+    <p>（五）侮辱、诽谤、恐吓、涉及他人隐私等侵害他人合法权益的；</p>
+    <p>（六）存在可能破坏、篡改、删除、影响金吉列网站任何系统正常运行或未经授权秘密获取金吉列网站及其他用户的数据、个人资料的病毒、木马、爬虫等恶意软件、程序代码的；</p>
+    <p>（七）其他违背社会公共利益或公共道德或依据本协议不适合在金吉列网站上发布的。</p>
 
   </div>
 </div>
