--- a/views/widget/new_footer/new_footer.html
+++ b/views/widget/new_footer/new_footer.html
@@ -13,7 +13,7 @@
           <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/events') }}">大事记</a></li>
           <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('about/cooperation') }}">商务合作</a></li>
           <li><a target="_blank"  rel="nofollow"   href="http://special.zhaopin.com/bj/2015/jjl032714/enter.html">诚聘英才</a></li>
-          <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('agreement') }}">用户协议</a></li>
+          <li><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('agreement') }}">使用协议</a></li>
         </ul>
       </div>
       <div class="sitemap sitemap02">
